docs/design/classes/core/networks/websocket/machine/v7/machine.part.2.md
# WebSocket Client Implementation Design & Guide

## Chapter 1: Design

This implementation design follows the stability and governance guidelines defined in `governance.md`. All implementation decisions must comply with these guidelines to ensure system stability and maintainability.

### 1.1 Component Architecture

```mermaid
C4Context
    title System Context - WebSocket Client Components

    Person(app, "Application", "System using WebSocket Client")
    
    System_Boundary(client, "WebSocket Client System") {
        System(core, "Core State Machine", "xstate v5 implementation")
        System(socket, "WebSocket Manager", "ws implementation")
        System(queue, "Message Queue", "Ordered message handling")
        System(limiter, "Rate Limiter", "Controls message flow")
        System(monitor, "Health Monitor", "Connection monitoring")
    }

    System_Ext(logger, "Logger System", "@qi/core/logger")
    System_Ext(config, "Config System", "@qi/core/config")
    System_Ext(errors, "Error System", "@qi/core/errors")

    Rel(app, core, "Uses")
    Rel(core, socket, "Controls")
    Rel(socket, queue, "Uses")
    Rel(socket, limiter, "Checks")
    Rel(socket, monitor, "Monitored by")
    
    Rel(core, logger, "Logs to")
    Rel(core, config, "Configures from")
    Rel(core, errors, "Reports errors to")
```

### 1.2 Component Interactions

```mermaid
C4Component
    title Component View - Interactions

    Container(stateMachine, "State Machine", "xstate v5", "Manages client lifecycle")
    Container(wsManager, "WebSocket Manager", "ws", "Handles raw WebSocket")
    Container(msgQueue, "Message Queue", "Internal", "Orders messages")
    Container(rateLimit, "Rate Limiter", "Internal", "Controls flow")
    
    Container_Boundary(core, "Core Services") {
        Component(configService, "Config Service", "@qi/core/config", "Configuration management")
        Component(errorService, "Error Handler", "@qi/core/errors", "Error processing")
        Component(logService, "Logger", "@qi/core/logger", "Logging service")
    }

    Rel(stateMachine, wsManager, "Controls")
    Rel(wsManager, msgQueue, "Enqueues/Dequeues")
    Rel(wsManager, rateLimit, "Checks limits")
    
    Rel(stateMachine, configService, "Reads config")
    Rel(stateMachine, errorService, "Reports errors")
    Rel(stateMachine, logService, "Logs events")
```

```mermaid
sequenceDiagram
    participant C as Client
    participant SM as StateMachine
    participant WS as WebSocketManager
    participant Q as MessageQueue

    %% Connection Flow
    C->>SM: connect(url)
    activate SM
    SM->>WS: initiate connection
    activate WS
    WS-->>SM: OPEN event
    deactivate WS
    SM-->>C: connected
    deactivate SM

    %% Message Flow
    C->>SM: send(message)
    activate SM
    SM->>Q: enqueue
    activate Q
    Q-->>SM: queued
    deactivate Q
    SM->>WS: send
    activate WS
    WS-->>SM: sent
    deactivate WS
    SM-->>C: success
    deactivate SM

    %% Error + Retry Flow
    WS->>SM: ERROR event
    activate SM
    SM->>SM: increment retries
    SM->>WS: reconnect
    activate WS
    WS-->>SM: OPEN event
    deactivate WS
    SM-->>C: reconnected
    deactivate SM
```

### 1.3 Directory Structure

```
src/
├── core/
│   ├── StateMachine.ts           # xstate v5 implementation
│   ├── WebSocketManager.ts       # ws implementation
│   ├── MessageQueue.ts           # Queue implementation
│   ├── RateLimiter.ts           # Rate limiting
│   └── HealthMonitor.ts          # Health checking
│
├── types/
│   ├── index.ts                  # Type exports
│   ├── states.ts                 # State definitions
│   ├── events.ts                 # Event definitions
│   ├── messages.ts               # Message types
│   └── config.ts                 # Configuration types
│
├── services/
│   ├── retry/                    # Retry mechanism
│   │   ├── strategy.ts
│   │   └── backoff.ts
│   └── validation/               # Message validation
│       └── schema.ts
│
├── utils/
│   ├── logger.ts                 # Logging utilities
│   ├── errors.ts                 # Error utilities
│   └── constants.ts              # Constants
│
└── index.ts                      # Main entry point
```

### 1.4 Component Specifications

#### State Machine (Using xstate v5)
- Implements core state logic defined in formal spec
- Manages connection lifecycle
- Handles events and transitions
- Uses context for configuration and state data

#### WebSocket Manager
- Wraps ws library
- Handles raw socket operations
- Manages connection lifecycle
- Implements retry logic

#### Message Queue
- Implements FIFO queue
- Ensures message ordering
- Handles overflow conditions
- Maintains delivery guarantees

#### Rate Limiter
- Implements sliding window
- Enforces rate limits
- Handles backpressure
- Manages window lifecycle

## Chapter 2: Implementation Guide

### 2.1 Core Dependencies

```json
{
  "dependencies": {
    "ws": "^8.0.0",
    "xstate": "^5.0.0",
    "@qi/core": "workspace:*"
  }
}
```

### 2.2 Key Implementation Rules

1. **State Machine Implementation**
   ```typescript
   import { createMachine } from 'xstate';
   
   export const websocketMachine = createMachine({
     id: 'websocket',
     initial: 'disconnected',
     context: {
       // State machine context
     },
     states: {
       // State definitions
     }
   });
   ```

2. **WebSocket Manager**
   ```typescript
   import { WebSocket } from 'ws';
   import { logger } from '@qi/core/logger';
   
   export class WebSocketManager {
     private socket: WebSocket | null = null;
     
     constructor(private readonly config: WebSocketConfig) {}
     
     // Implementation
   }
   ```

3. **Error Handling**
   ```typescript
   import { ApplicationError, ErrorCode } from '@qi/core/errors';
   
   // Use structured error handling
   throw new ApplicationError(
     'Connection failed',
     ErrorCode.CONNECTION_ERROR,
     500,
     { details: error.message }
   );
   ```

4. **Configuration**
   ```typescript
   import { ConfigLoader } from '@qi/core/config';
   
   const config = await ConfigLoader.load('websocket.config.json');
   ```

### 2.3 Integration Points

1. **State Machine Integration**
   - Use xstate v5 service pattern
   - Implement state machine interpreters
   - Handle state transitions

2. **Error Handling Integration**
   - Use @qi/core/errors for all errors
   - Maintain error hierarchy
   - Implement error recovery

3. **Logging Integration**
   - Use @qi/core/logger consistently
   - Log appropriate levels
   - Include context in logs

4. **Configuration Integration**
   - Use @qi/core/config for all configs
   - Implement config validation
   - Handle config updates

### 2.4 Testing Strategy

1. **Unit Tests**
   - State machine transitions
   - Message queue operations
   - Rate limiter functionality

2. **Integration Tests**
   - End-to-end connection flow
   - Message delivery guarantees
   - Error recovery scenarios

3. **Performance Tests**
   - Message throughput
   - Connection handling
   - Memory usage

### 2.5 Development Guidelines

1. **Code Organization**
   - Follow directory structure
   - Maintain clean interfaces
   - Use consistent patterns

2. **State Management**
   - Use xstate v5 features
   - Maintain state invariants
   - Handle edge cases

3. **Error Handling**
   - Use structured errors
   - Implement recovery
   - Log appropriately

4. **Performance Considerations**
   - Optimize message handling
   - Manage memory usage
   - Handle backpressure
